# sat-visions-49a1232e

./: .env  .gitignore  .replit  package-lock.json  package.json  proxy.mjs  pyproject.toml  replit.md  vercel.json  vite.config.ts
.agents/memory/: MEMORY.md  techlab-build.md
.lovable/: plan.md
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1784293594591.txt  Pasted-Build-a-production-ready-web-application-called-TechLab_1784448772613.txt  Pasted-You-are-an-expert-academic-AI-writer-and-LaTeX-speciali_1784295427134.txt
python_parser/: analyzer.py  exporter.py  main.py  ml_engine.py
src/: global.d.ts  routeTree.gen.ts  server.ts
src/components/: UpgradeModal.tsx
src/components/dashboard/: AIChat.tsx  GeoMap.tsx
src/components/tec/: EnginePanel.tsx  GroundTrack.tsx  SkyPlot.tsx
src/components/techlab/: ExportPanel.tsx  MLPanel.tsx
src/integrations/supabase/: no-auth-middleware.ts  types.ts
src/lib/: admin.functions.ts  ai-chat.functions.ts  ai-report.functions.ts  env-check.ts  geotiff-utils.ts  projects.functions.ts  usage-limit.ts  user-registry.ts
src/lib/tec/: calculations.ts  engine.ts  parser.ts
src/routes/: __root.tsx  about.tsx  auth-callback.tsx  auth.error.tsx  auth.tsx  data-lab.tsx  index.tsx  tec-lab.tsx  user-auth.tsx
src/routes/_authenticated/: admin.tsx  (+5 more)
supabase/migrations/: 20260716034607_88e5bdc4-30f0-4bea-9dfc-8286755c59bb.sql  20260716034627_c99ca0e4-d494-442a-bc46-63e8acc485ec.sql  20260717051025_a59aa657-8fe2-4b76-988a-8b738dbdb2dd.sql  20260724055733_2d2651c5-c521-4b8a-b8e5-d66c51d3d570.sql
