[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "georinex>=1.16.2",
    "h5py>=3.16.0",
    "netcdf4>=1.7.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "openpyxl>=3.1.5",
    "nbformat>=5.10.4",
    "openai>=1.54.0",
]
